# NeuroFlow

./: Cargo.toml
examples/: approximation.rs  classification.rs
src/: lib.rs
src/activators/: mod.rs
src/data/: mod.rs
src/io/: mod.rs
tests/: test_data.rs  test_io.rs  test_lib.rs
