[package]
name = "neuroflow"
version = "0.2.0"
edition = "2021"
description = "The neural network library implemented in Rust"
repository = "https://github.com/MikhailKravets/NeuroFlow"
readme = "README.md"
keywords = ["machine-learning", "neural-networks", "data-learning", "math", "backpropagation"]
categories = ["algorithms", "science"]
license = "MIT"

authors = ["Mikhail Kravets <michkravets@gmail.com>"]
exclude = ["examples/*", "tests/*"]

[badges]
codecov = { repository = "MikhailKravets/NeuroFlow", branch = "master", service = "github" }

[features]
default = ["std", "io", "serde", "csv"]
serde = ["std", "dep:serde", "dep:serde_derive", "serde_json", "bincode"]
csv = ["std", "dep:csv"]
io = ["std"]
std = []

[dependencies]
rand = "~0.8"
serde = { version = "~1.0", optional = true }
serde_derive = { version = "~1.0", optional = true }
serde_json = { version = "~1.0", optional = true }
bincode = { version = "~1.3", optional = true }
csv = { version = "~1.2", optional = true }
rand_distr = "0.4.3"

[dev-dependencies]
time = "0.1"
